tests/paczka1/fuzzy1/39146974.err
Error in line 5: S686 S454 65,9
Error in line 20: JmKRGs S618 12,9
Error in line 21: JmKRGs S686 81,3
Error in line 24: JmKRGs S618 93,9
Error in line 17: w5hBr S454 211,7
Error in line 26: JmKRGs S454 52,5
Error in line 28: w5hBr S618 32,5
Error in line 18: HnDz S686 8,6
Error in line 29: JmKRGs S618 37,1
Error in line 30: w5hBr S454 99,3
Error in line 36: JmKRGs S686 61,3
